Issue #12467: warnings: fix a race condition if a warning is emitted at shutdown, if globals()['__file__'] is None.